--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but MGCH ERP doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but project doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
